[package]
name = "rrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
prost = "0.14.1"
tokio = { version = "1.49.0", features = ["full"]}
tokio-stream = "0.1.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tonic-web = "0.14.2"
uuid = "1.19.0"

[build-dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost-build = "0.14.2"
