[package]
name = "rrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
num_cpus = "1.17.0"
prost = "0.14.1"
rcgen = "0.14.6"
retty = "0.29.0"
serde = "1.0.228"
serde_json = "1.0.149"
str0m = "0.14.3"
tokio = { version = "1.49.0", features = ["full"]}
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tonic-web = "0.14.2"
tungstenite = "0.28.0"
url = "2.5.8"
uuid = "1.19.0"
waitgroup = "0.1.2"

[build-dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost-build = "0.14.2"
