[package]
name = "rrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
bytes = "1.5"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
interceptor = "0.12"
log = "0.4.29"
rand = "0.8"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"]}
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
toml = "0.8"
tungstenite = "0.28.0"
url = "2.5.8"
uuid = "1.19.0"
webrtc = "0.11"
